learned about dynamic images final lesson

--- a/blog/first-blog/index.mdx
+++ b/blog/first-blog/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "My First Post"
 date: "2021-07-23"
+hero_image: "./img1.jpg"
+hero_image_alt: "images is not loaded"
+hero_image_credit_text: "jan kronies"
+hero_image_credit_link: "https://unsplash.com/photos/fNCT47HnlNE"
 ---
 
 This is my first blog post! Isn't it _great_?
